--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "vercel-ai-middleware",
+  "name": "@restatedev/vercel-ai-middleware",
   "version": "0.0.1",
   "description": "Vercel AI Middleware",
   "files": [
-    "dist"
+    "dist",
+    "package.json",
+    "README.md"
   ],
   "type": "module",
   "main": "dist/index.js",
@@ -16,9 +18,14 @@
   },
   "devDependencies": {
     "@arethetypeswrong/cli": "^0.18.2",
+    "@changesets/cli": "^2.29.5",
     "prettier": "^3.6.2",
     "tsup": "^8.5.0",
     "typescript": "^5.8.3"
+  },
+  "peerDependencies": {
+    "@restatedev/restate-sdk": "^1.6.0",
+    "@restatedev/restate-sdk-zod": "^1.6.0"
   },
   "scripts": {
     "build": "tsup",
@@ -27,7 +34,9 @@
     "check-format": "prettier --check .",
     "check-exports": "attw --pack .",
     "lint": "tsc",
-    "ci": "npm run build && npm run check-format && npm run check-exports && npm run lint"
+    "ci": "npm run build && npm run check-format && npm run check-exports && npm run lint",
+    "local-release": "changeset version && changeset publish",
+    "prepublishOnly": "npm run ci"
   },
   "repository": {
     "type": "git",
