--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "check-exports": "attw --pack .",
     "lint": "tsc",
     "ci": "npm run build && npm run check-format && npm run check-exports && npm run lint",
-    "local-release": "changeset version && changeset publish",
+    "local-release": "changeset version",
     "prepublishOnly": "npm run ci"
   },
   "repository": {
