--- a/package.json
+++ b/package.json
@@ -19,9 +19,17 @@
   "devDependencies": {
     "@arethetypeswrong/cli": "^0.18.2",
     "@changesets/cli": "^2.29.5",
+    "@eslint/js": "^9.30.1",
+    "@eslint/json": "^0.12.0",
+    "@eslint/markdown": "^6.6.0",
+    "@typescript-eslint/eslint-plugin": "^8.35.1",
+    "@typescript-eslint/parser": "^8.35.1",
+    "eslint": "^9.30.1",
+    "globals": "^16.3.0",
     "prettier": "^3.6.2",
     "tsup": "^8.5.0",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.35.1"
   },
   "peerDependencies": {
     "@restatedev/restate-sdk": "^1.6.0",
@@ -33,9 +41,10 @@
     "format": "prettier --write .",
     "check-format": "prettier --check .",
     "check-exports": "attw --pack .",
-    "lint": "tsc",
+    "lint": "tsc && eslint",
     "ci": "npm run build && npm run check-format && npm run check-exports && npm run lint",
-    "local-version": "changeset version",
+    "changeset": "changeset",
+    "version": "changeset version",
     "local-release": "changeset publish",
     "prepublishOnly": "npm run ci"
   },
