--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@eslint/js": "^9.30.1",
     "@eslint/json": "^0.12.0",
     "@eslint/markdown": "^6.6.0",
+    "@types/node": "^24.0.10",
     "@typescript-eslint/eslint-plugin": "^8.35.1",
     "@typescript-eslint/parser": "^8.35.1",
     "eslint": "^9.30.1",
@@ -33,7 +34,8 @@
   },
   "peerDependencies": {
     "@restatedev/restate-sdk": "^1.6.0",
-    "@restatedev/restate-sdk-zod": "^1.6.0"
+    "ai": "^4.3.16",
+    "superjson": "^2.2.2"
   },
   "scripts": {
     "build": "tsup",
