--- a/package.json
+++ b/package.json
@@ -45,12 +45,12 @@
     "check-format": "prettier --check .",
     "check-exports": "attw --pack .",
     "lint": "tsc && eslint",
-    "ci": "npm run build && npm run check-format && npm run check-exports && npm run lint",
+    "ci": "npm run build && npm run check-format && npm run check-exports && npm run lint && npm run check-forgotten-exports",
     "changeset": "changeset",
     "version": "changeset version",
     "local-release": "changeset publish",
     "prepublishOnly": "npm run ci",
-    "api:extract": "api-extractor run --local --diagnostics"
+    "check-forgotten-exports": "api-extractor run --local"
   },
   "repository": {
     "type": "git",
