--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: johnnybenson/package-json-versioned-action@v1.0.9
         id: package-json
         with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.REPO_GITHUB_TOKEN }}
       - run: echo "has-updated -- ${{ steps.package-json.outputs.has-updated }}"
     outputs:
       has-updated: ${{ steps.package-json.outputs.has-updated }}
