--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,7 +44,9 @@ jobs:
         with:
           node-version: '22'
       - run: npm install
-      - run: npm run ci
+      - run: npm run local-release
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
       - name: Create a release
         id: create-release
         uses: ncipollo/release-action@v1
