--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,8 +33,8 @@ jobs:
             echo "exists=false" >> $GITHUB_OUTPUT
           fi
     outputs:
-      need-to-release: ${{ steps.check_tag.outputs.exists != 'false' }}
-      version: ${{ steps.get_version.version }}
+      need-to-release: ${{ steps.check_tag.outputs.exists != false }}
+      version: ${{ steps.get_version.outputs.version }}
   release:
     runs-on: ubuntu-latest
     name: Release
