--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@restatedev/vercel-ai-middleware",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Vercel AI Middleware",
   "files": [
     "dist",
@@ -34,8 +34,9 @@
     "typescript-eslint": "^8.35.1"
   },
   "peerDependencies": {
-    "@restatedev/restate-sdk": "^1.7.0",
-    "ai": "^4.3.16",
+    "@restatedev/restate-sdk": "^1.8.4",
+    "@restatedev/restate-sdk-zod": "^1.8.4",
+    "ai": "^5.0.30",
     "superjson": "^2.2.2"
   },
   "scripts": {
